[package]
name = "abseil"
version = "0.2.0"
edition = "2021"
description = "An easy app storage provider."
homepage = "https://github.com/archer884/abseil"
repository = "https://github.com/archer884/abseil"
license = "MIT/Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
directories = "5.0.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
